Update PreciseScissor.java